fixed typo and margin deficit

--- a/index.html
+++ b/index.html
@@ -25,23 +25,16 @@
     </div>
     <div class="personal-summary">
       <h3>Personal Information</h3>
-      <p>A bright, talented and ambitious JavaScript developer with a strong technical background who possesses
-        self-discipline and the ability to work with minimum supervision across all board. Possess a deep love for and
-        to teach quality Computer Science. Have developed the passion to work with various emerging web technologies
-        through learning and building various product with production ready awareness and grit. Possessing a good team
-        spirit, deadline orientated and having the ability to organize and present complex solutions clearly and
-        accurately. Looking for a suitable position where I can become a better developer with an exciting and
-        innovative company that offers room for progression and building of maintainable codebase with collaborative
-        efforts. </p>
-      <p>I have been involved with building a tech community here in Ibadan.A bright, talented and ambitious
-        JavaScript developer with a strong technical background who possesses self-discipline and the ability to work
-        with minimum supervision across all board. Possess a deep love for and to teach quality Computer Science. Have
-        developed the passion to work with various emerging web technologies through learning and building various
-        product with production ready awareness and grit. Possessing a good team spirit, deadline orientated and having
-        the ability to organize and present complex solutions clearly and accurately. Looking for a suitable position
-        where I can become a better developer with an exciting and innovative company that offers room for progression
-        and building of maintainable codebase with collaborative efforts. I have been involved with building a tech
-        community here in Ibadan.</p>
+      <p>A bright, talented and ambitious JavaScript developer with a strong technical background with
+        self-discipline and good work ethic. Possess a deep love for
+        teaching JavaScript. Have passion to work with emerging web technologies and building products with production
+        ready awareness and grit. Have a good team
+        spirit, deadline orientated and having the ability to organize, present complex solutions clearly and
+        accurately.</p>
+      <p>Looking for a suitable position where I can become a better developer with an exciting and
+        innovative company that offers room for progression and building of maintainable products with collaborative
+        efforts.
+        I have been involved with building a tech community here in Ibadan.</p>
     </div>
     <div class="work-experience">
       <section>
@@ -62,19 +55,20 @@
       </section>
       <section>
         <h4>CMAPIT HUB – Ogbomoso, Oyo State – (December 2015 – July 2016) – Intern</h4>
-        <article>As a student ambassador for Jet Brain, I co-organized events to help proper exposure to current
-          technologies like Git and GitHub. Led a Team that organized Jet Brains Student Meet up, GitHub Student Meet
-          up to facilitate software development using collaborative effort and contribution among young developer in
+        <article>As a student ambassador for Jet Brain, I co-organized events to help expose students to current
+          technologies like Git using GitHub and Jet Brain Softwares. Led a Team that organized Jet Brains Student Meet
+          up, GitHub Student Meet
+          up to facilitate software development process using collaborative effort and contribution among young
+          upcoming developers in
           the Lautech Community.
-          Worked with Raspberry Pi to facilitate computer science training and worked on creating an unofficial radio
-          station hosted within the hub built with python.
+          <p>Worked with Raspberry Pi to facilitate computer science training.</p>
         </article>
       </section>
       <section>
-        <h4>LAUTECH ICT SOFTWARE DEPARTMENT - Ogbomoso, Oyo State - (June - Decemeber 2014) - Intern</h4>
+        <h4>LAUTECH ICT SOFTWARE DEPARTMENT - Ogbomoso, Oyo State - (June 2014 - December 2014) - Intern</h4>
         <article>
           I worked on a team of interns where we were introduced to Core .Net technologies using ASP.net. We worked on
-          a development team that worked on a Transcript Application.
+          a development team that worked on a Transcript Application software.
         </article>
       </section>
     </div>
@@ -113,16 +107,16 @@
         <h4>Back-End Technologies</h4>
         <div class="row row_cell">
           <p class="front-end_item">
-            Nodejs - <progress value="50" max="100">Nodejs</progress>
+            Nodejs - <progress value="70" max="100">Nodejs</progress>
           </p>
           <p class="front-end_item">
-            Express - <progress value="50" max="100">Express</progress>
+            Express - <progress value="70" max="100">Express</progress>
           </p>
           <p class="front-end_item">
-            REST-API - <progress value="50" max="100">REST-API</progress>
+            REST-API - <progress value="100" max="100">REST-API</progress>
           </p>
           <p class="front-end_item">
-            GraphQL - <progress value="50" max="100">GraphQL</progress>
+            GraphQL - <progress value="20" max="100">GraphQL</progress>
           </p>
         </div>
       </section>
@@ -139,7 +133,7 @@
             SQL - <progress value="50" max="100">SQL</progress>
           </p>
           <p class="front-end_item">
-            MongoDB - <progress value="50" max="100">NoSQL-MongoDB</progress>
+            MongoDB - <progress value="70" max="100">NoSQL-MongoDB</progress>
           </p>
         </div>
 
