updated the side-project section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- <link rel="dns-prefetch" href="https://avatars0.githubusercontent.com"> -->
+    <link rel="shortcut icon" href="https://avatars0.githubusercontent.com/u/10030028?s=40&v=4" type="image/x-icon">
     <title>Ojo Oluwasetemi Stephen - CV</title>
+    <meta name="description" content="A bright, talented and ambitious JavaScript developer with a strong technical background with
+    self-discipline and good work ethic. Possess a deep love for
+    teaching JavaScript.👨‍💻">
+    <meta property="og:image" content="https://avatars0.githubusercontent.com/u/10030028?v=3">
+    <meta property="og:title" content="Oluwasetemi CV">
+    <meta property="og:description" content="A bright, talented and ambitious JavaScript developer with a strong technical background with
+    self-discipline and good work ethic. Possess a deep love for
+    teaching JavaScript.👨‍💻">
     <link rel="stylesheet" href="flex.css">
     <link rel="stylesheet" href="index.css">
   </head>
@@ -50,7 +60,7 @@
           Trainer.</h4>
         <article>Tasked with the Responsibility of teaching current computer science to students using modern
           facilities.
-          Teaching and upgrading staff IT experience.
+          Teaching and upgrading staff IT experience. I trained Staffs and students on Microsoft Packages and Modern Web Experience and Digital Relevance.
         </article>
       </section>
       <section>
@@ -75,6 +85,11 @@
     <hr />
     <div class="side-projects">
       <h3>Side Projects</h3>
+      <p><a href="https://stores-app-lhinvnequz.now.sh">Stores - Built from a tutorial by @wesbos using Node and JavaScript with MongoDB deployed on Now</a></p>
+      <p><a href="https://yelp-camp-pmmjlzfmcv.now.sh">Yelp Camp - Built from a Colt Steele Tutorial with additional features with Node and JavaScript deployed on Now and Database hosted on mLab!</a></p>
+      <p><a href="https://consistent-university-ppunkmmvej.now.sh/">Consistent University - An Educational Website with Nextjs deployed on Now</a></p>
+      <p><a href="https://t.me/the_word_dico_bot">A Telegram Bot - Word Assitant deployed on Openode</a></p>
+      <p><a href="/">Sick Fits - **Work in Progress**</a></p>
     </div>
 
     <div class="education">
@@ -84,6 +99,8 @@
       <h5>Professional Qualifications</h5>
       <p>Full Stack JavaScript – Freecodecamp (Online, In View)</p>
       <p>Web developer Course by Colt Steele on Udemy (Certificate Available)</p>
+      <p>LearnNode Course by <a href="https://twitter.com/wesbos"></a> (Certificate Available)</p>
+      <p>Advanced React with GraphQL Course by <a href="https://twitter.com/wesbos"></a> (Certificate Available)</p>
     </div>
     <div class="technical-skills">
       <h3>Technical Skills</h3>
