small clean up, add new font for headings and body

--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- <link rel="dns-prefetch" href="https://avatars0.githubusercontent.com"> -->
-    <link rel="shortcut icon" href="https://avatars0.githubusercontent.com/u/10030028?s=40&v=4" type="image/x-icon">
     <title>Ojo Oluwasetemi Stephen - CV</title>
     <meta name="description" content="A bright, talented and ambitious JavaScript developer with a strong technical background with
     self-discipline and good work ethic. Possess a deep love for
     teaching JavaScript.👨‍💻">
     <meta property="og:image" content="https://avatars0.githubusercontent.com/u/10030028?v=3">
-    <meta property="og:title" content="Oluwasetemi CV">
-    <meta property="og:description" content="A bright, talented and ambitious JavaScript developer with a strong technical background with
-    self-discipline and good work ethic. Possess a deep love for
-    teaching JavaScript.👨‍💻">
+    <meta property="og:title" content="Ojo Oluwasetemi's CV">
+    <meta property="og:description" content="A ambitious 👨‍💻JavaScript Developer🔥 with a strong technical background, self-discipline and good work ethic. My love for teaching JavaScript is unconditional.💖">
+    <!-- <link rel="dns-prefetch" href="https://avatars0.githubusercontent.com"> -->
+    <link rel="shortcut icon" href="https://avatars0.githubusercontent.com/u/10030028?s=40&v=4" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,300i|Lora:700" rel="stylesheet">
     <link rel="stylesheet" href="flex.css">
     <link rel="stylesheet" href="index.css">
   </head>
