--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ojo Oluwasetemi Stephen - CV</title>
+    <title>Ojo Oluwasetemi Stephen - Backend Developer🔥</title>
     <meta name="description" content="A bright, talented and ambitious JavaScript developer with a strong technical background with
     self-discipline and good work ethic. Possess a deep love for
     teaching JavaScript.👨‍💻">
@@ -27,29 +27,26 @@
       <p class="country">Nationality: Nigerian.</p>
       <p class="dob">Date of birth: 12th of February, 1993. </p>
       <p class="info-contact">
-        <span class="tel">T: +234 (8051) - 906 – 829,</span>
-        <span class="mobile">M: +234 (7036) - 520 – 266,</span>
-        <span class="email">E: setemiojo@gmail.com</span>
+        <span class="tel">📞 +234 (8051) - 906 – 829,</span>
+        <span class="mobile">📱 +234 (7036) - 520 – 266,</span>
+        <span class="email">📩 setemiojo@gmail.com</span>
       </p>
     </div>
     <div class="personal-summary">
       <h3>Personal Information</h3>
-      <p>A bright, talented and ambitious JavaScript developer with a strong technical background with
-        self-discipline and good work ethic. Possess a deep love for
-        teaching JavaScript. Have passion to work with emerging web technologies and building products with production
-        ready awareness and grit. Have a good team
-        spirit, deadline orientated and having the ability to organize, present complex solutions clearly and
-        accurately.</p>
-      <p>Looking for a suitable position where I can become a better developer with an exciting and
-        innovative company that offers room for progression and building of maintainable products with collaborative
-        efforts.
-        I have been involved with building a tech community here in Ibadan.</p>
+      <p>
+        A Backend JavaScript developer with a mild technical background and little experience with self-discipline and good work ethic. Possess a deep love for JavaScript. Have passion to work with emerging web technologies and building products especially the Backend details using a Nodejs. A team player, who is organized, can present complex solutions clearly and accurately with love for speaking and teaching👨‍🏫.
+      </p>
+      <p>
+        With less than 2 years+ worth experience I am looking for an opportunity to work on modern web application development as JavaScript (JavaScript or Node) Developer. I am a co-organizer of the FreeCodeCamp Ibadan Community Meet-up where I have mentored a lot people to get started with JavaScript as a language.
+      </p>
     </div>
     <div class="work-experience">
       <section>
         <h3>Work Experience</h3>
         <h4>EDULIGHT CONSULTING – Dugbe, Ibadan, Oyo State. – (March, 2018 – Present) – Web Developer and Trainer.</h4>
-        <article>Built modern curriculum around JavaScript and Node, taught the web foundation with latest standards.
+        <article>
+          Built modern curriculum around JavaScript and Node, taught the web foundation with latest standards.
           Built several prototype used for teaching student and solution for small scale businesses. Increased the
           company’s reputation by organizing monthly meet-ups for developers in Ibadan.
         </article>
@@ -57,19 +54,16 @@
       <section>
         <h4>MT. ST. MICHAEL SECONDARY SCHOOL– Aliade, Benue State – (2017 - 2018) - Computer Instructor and Staff
           Trainer.</h4>
-        <article>Tasked with the Responsibility of teaching current computer science to students using modern
+        <article>
+          Tasked with the Responsibility of teaching current computer science to students using modern
           facilities.
           Teaching and upgrading staff IT experience. I trained Staffs and students on Microsoft Packages and Modern Web Experience and Digital Relevance.
         </article>
       </section>
       <section>
         <h4>CMAPIT HUB – Ogbomoso, Oyo State – (December 2015 – July 2016) – Intern</h4>
-        <article>As a student ambassador for Jet Brain, I co-organized events to help expose students to current
-          technologies like Git using GitHub and Jet Brain Softwares. Led a Team that organized Jet Brains Student Meet
-          up, GitHub Student Meet
-          up to facilitate software development process using collaborative effort and contribution among young
-          upcoming developers in
-          the Lautech Community.
+        <article>
+          As a student ambassador for Jet Brain, I co-organized events to help expose students to current technologies like Git using GitHub and Jet Brain Softwares. Led a Team that organized Jet Brains Student Meet-up, GitHub Student Meet-up to facilitate software development process using collaborative effort contribution among young upcoming developers in the Lautech Community.
           <p>Worked with Raspberry Pi to facilitate computer science training.</p>
         </article>
       </section>
@@ -87,8 +81,8 @@
       <p><a href="https://stores-app-lhinvnequz.now.sh">Stores - Built from a tutorial by @wesbos using Node and JavaScript with MongoDB deployed on Now</a></p>
       <p><a href="https://yelp-camp-pmmjlzfmcv.now.sh">Yelp Camp - Built from a Colt Steele Tutorial with additional features with Node and JavaScript deployed on Now and Database hosted on mLab!</a></p>
       <p><a href="https://consistent-university-ppunkmmvej.now.sh/">Consistent University - An Educational Website with Nextjs deployed on Now</a></p>
-      <p><a href="https://t.me/the_word_dico_bot">A Telegram Bot - Word Assitant deployed on Openode</a></p>
-      <p><a href="/">Sick Fits - **Work in Progress**</a></p>
+      <p><a href="https://t.me/the_word_dico_bot">A Telegram Bot - Word Assistant deployed on Openode</a></p>
+      <p><a href="#">Sick Fits - **Work in Progress**</a></p>
     </div>
 
     <div class="education">
@@ -108,14 +102,14 @@
         <div class="front-end">
           <div class="row row_cell">
             <p class="front-end_item">HTML - <progress value="90" max="100">HTML</progress></p>
-            <p class="front-end_item">CSS - <progress value="90" max="100">CSS</progress></p>
-            <p class="front-end_item">JavaScript - <progress value="80" max="100">JavaScript</progress></p>
+            <p class="front-end_item">CSS - <progress value="80" max="100">CSS</progress></p>
+            <p class="front-end_item">JavaScript - <progress value="70" max="100">JavaScript</progress></p>
           </div>
           <div class="row row_cell">
             <p class="front-end_item">React - <progress value="50" max="100">React</progress></p>
-            <p class="front-end_item">Redux - <progress value="50" max="100">Redux</progress></p>
+            <p class="front-end_item">Redux - <progress value="30" max="100">Redux</progress></p>
             <p class="front-end_item">Webpack - <progress value="50" max="100">Webpack</progress></p>
-            <p class="front-end_item">Vue - <progress value="50" max="100">Vue</progress></p>
+            <p class="front-end_item">Vue - <progress value="30" max="100">Vue</progress></p>
           </div>
         </div>
       </section>
@@ -132,7 +126,7 @@
             REST-API - <progress value="100" max="100">REST-API</progress>
           </p>
           <p class="front-end_item">
-            GraphQL - <progress value="20" max="100">GraphQL</progress>
+            GraphQL - <progress value="60" max="100">GraphQL</progress>
           </p>
         </div>
       </section>
