fix for pdf optimization

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     <div class="personal-summary">
       <h3>Personal Information</h3>
       <p>
-        A Backend JavaScript developer with a mild technical background and little experience with self-discipline and good work ethic. Possess a deep love for JavaScript. Have passion to work with emerging web technologies and building products especially the Backend details using a Nodejs. A team player, who is organized, can present complex solutions clearly and accurately with love for speaking and teaching👨‍🏫.
+        A Backend JavaScript developer with a mild technical background and little experience with self-discipline and good work ethic. Possess a deep love for JavaScript. Have passion to work with emerging web technologies and building products especially the Backend details using Nodejs. A team player, who is organized, can present complex solutions clearly and accurately with love for speaking and teaching👨‍🏫.
       </p>
       <p>
-        With less than 2 years+ worth experience I am looking for an opportunity to work on modern web application development as JavaScript (JavaScript or Node) Developer. I am a co-organizer of the FreeCodeCamp Ibadan Community Meet-up where I have mentored a lot people to get started with JavaScript as a language.
+        With less than 2 years+ worth experience I am looking for an opportunity to work on modern web application development as JavaScript (JavaScript or Node) Developer. I am a co-organizer of the FreeCodeCamp Ibadan Community Meet-up where I have mentored 50+ devs to get started with JavaScript as a language.
       </p>
     </div>
     <div class="work-experience">
@@ -104,12 +104,11 @@
             <p class="front-end_item">HTML - <progress value="90" max="100">HTML</progress></p>
             <p class="front-end_item">CSS - <progress value="80" max="100">CSS</progress></p>
             <p class="front-end_item">JavaScript - <progress value="70" max="100">JavaScript</progress></p>
-          </div>
-          <div class="row row_cell">
+            <p class="front-end_item">React - <progress value="50" max="100">React</progress></p>
             <p class="front-end_item">React - <progress value="50" max="100">React</progress></p>
             <p class="front-end_item">Redux - <progress value="30" max="100">Redux</progress></p>
             <p class="front-end_item">Webpack - <progress value="50" max="100">Webpack</progress></p>
-            <p class="front-end_item">Vue - <progress value="30" max="100">Vue</progress></p>
+            <p class="front-end_item">Nextjs - <progress value="30" max="100">Nextjs</progress></p>
           </div>
         </div>
       </section>
@@ -127,6 +126,9 @@
           </p>
           <p class="front-end_item">
             GraphQL - <progress value="60" max="100">GraphQL</progress>
+          </p>
+          <p class="front-end_item">
+            Containers - <progress value="20" max="100">Containers</progress>
           </p>
         </div>
       </section>
