revamped the eduLight description

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         A Backend JavaScript developer with a mild technical background and little experience with self-discipline and good work ethic. Possess a deep love for JavaScript. Have passion to work with emerging web technologies and building products especially the Backend details using Nodejs. A team player, who is organized, can present complex solutions clearly and accurately with love for speaking and teaching👨‍🏫.
       </p>
       <p>
-        With less than 2 years+ worth experience I am looking for an opportunity to work on modern web application development as JavaScript (JavaScript or Node) Developer. I am a co-organizer of the FreeCodeCamp Ibadan Community Meet-up where I have mentored 50+ devs to get started with JavaScript as a language.
+        With less than <a href="https://github.com/Oluwasetemi">2 years+ worth experience</a> I am looking for an opportunity to work on modern web application development as JavaScript (JavaScript or Node) Developer. I am a co-organizer of the FreeCodeCamp Ibadan Community Meet-up where I have mentored 50+ devs to get started with JavaScript as a language.
       </p>
     </div>
     <div class="work-experience">
@@ -46,9 +46,7 @@
         <h3>Work Experience</h3>
         <h4>EDULIGHT CONSULTING – Dugbe, Ibadan, Oyo State. – (March, 2018 – Present) – Web Developer and Trainer.</h4>
         <article>
-          Built modern curriculum around JavaScript and Node, taught the web foundation with latest standards.
-          Built several prototype used for teaching student and solution for small scale businesses. Increased the
-          company’s reputation by organizing monthly meet-ups for developers in Ibadan.
+          Built <a href="https://github.com/EduLight-Consulting">modern curriculum around JavaScript and Node, taught the web development in modern context. Built several prototype used for teaching student which can be found on </a> and solution for small scale businesses. Increased the company’s value in reputation and worth. I am the organizer of Freecodecamp Ibadan monthly meet-ups in Ibadan.
         </article>
       </section>
       <section>
