add git and linkedin social icons

--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
         <span class="mobile">📱 +234 (7036) - 520 – 266,</span>
         <span class="email">📩 setemiojo@gmail.com</span>
       </p>
+      <p>
+        <span class="github">
+          <img src="https://github.com/fluidicon.png" alt="github logo">
+          <a href="https://github.com/Oluwasetemi">Oluwasetemi</a>
+        </span>
+        <span class="linked-in">
+          <img src="https://static.licdn.com/sc/h/1bt1uwq5akv756knzdj4l6cdc" alt="linkedin Logo">
+          <a href="https://www.linkedin.com/in/setemiojo">Ojo Oluwasetemi</a>
+        </span>
+      </p>
     </div>
     <div class="personal-summary">
       <h3>Personal Information</h3>
@@ -44,9 +54,9 @@
     <div class="work-experience">
       <section>
         <h3>Work Experience</h3>
-        <h4>EDULIGHT CONSULTING – Dugbe, Ibadan, Oyo State. – (March, 2018 – Present) – Web Developer and Trainer.</h4>
+        <h4><a href="http://www.edulightconsulting.com.ng/">EDULIGHT CONSULTING</a> – Dugbe, Ibadan, Oyo State. – (March, 2018 – Present) – Web Developer and Trainer.</h4>
         <article>
-          Built <a href="https://github.com/EduLight-Consulting">modern curriculum around JavaScript and Node, taught the web development in modern context. Built several prototype used for teaching student which can be found on </a> and solution for small scale businesses. Increased the company’s value in reputation and worth. I am the organizer of Freecodecamp Ibadan monthly meet-ups in Ibadan.
+          Built <a href="https://github.com/EduLight-Consulting">modern curriculum around JavaScript and Node, taught web development and trained different Bootcamp cohorts. Built prototype used for teaching student.</a> and solution for small scale businesses. Our focus was leveraging JavaScript ease to build modern website. Increased the company’s value and reputation by producing skilled developers who are intern ready for affiliate business in need of developers. The organization hosts the <a href="http://fcc-ibadan.netlify.com">Freecodecamp Ibadan</a> monthly meet-ups in Ibadan every third saturday.
         </article>
       </section>
       <section>
