fiex title to software developer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ojo Oluwasetemi Stephen - Backend Developer🔥</title>
+    <title>Ojo Oluwasetemi Stephen - Software Developer🔥</title>
     <meta name="description" content="A bright, talented and ambitious JavaScript developer with a strong technical background with
     self-discipline and good work ethic. Possess a deep love for
     teaching JavaScript.👨‍💻">
@@ -49,7 +49,7 @@
     <div class="personal-summary">
       <h3>Personal Information</h3>
       <p>
-        A Backend JavaScript developer with a mild technical background and little experience with self-discipline and good work ethic. Possess a deep love for JavaScript. Have passion to work with emerging web technologies and building products especially the Backend details using Nodejs. A team player, who is organized, can present complex solutions clearly and accurately with love for speaking and teaching👨‍🏫.
+        A JavaScript developer with a good technical background, little experience with self-discipline and good work ethic. Possess a deep love for JavaScript. Have passion to work with emerging web technologies and building products especially the Backend details using Nodejs. A team player, who is organized, can present complex solutions clearly and accurately with love for speaking and teaching👨‍🏫.
       </p>
       <p>
         With less than <a href="https://github.com/Oluwasetemi">2 years+ worth experience</a> I am looking for an opportunity to work on modern web application development as JavaScript (JavaScript or Node) Developer. I am a co-organizer of the FreeCodeCamp Ibadan Community Meet-up where I have mentored 50+ devs to get started with JavaScript as a language.
@@ -58,7 +58,7 @@
     <div class="work-experience">
       <section>
         <h3>Work Experience</h3>
-        <h4><a href="http://www.edulightconsulting.com.ng/">EDULIGHT CONSULTING</a> – Dugbe, Ibadan, Oyo State. – (March, 2018 – Present) – Web Developer and Trainer.</h4>
+        <h4><a href="http://www.edulightconsulting.com.ng/">EDULIGHT CONSULTING</a> – Dugbe, Ibadan, Oyo State. – (March, 2018 – December, 2018) – Web Development Training Facilitator.</h4>
         <article>
           Built <a href="https://github.com/EduLight-Consulting">modern curriculum around JavaScript and Node, taught web development and trained different Bootcamp cohorts. Built prototype used for teaching student.</a> and solution for small scale businesses. Our focus was leveraging JavaScript ease to build modern website. Increased the company’s value and reputation by producing skilled developers who are intern ready for affiliate business in need of developers. The organization hosts the <a href="http://fcc-ibadan.netlify.com">Freecodecamp Ibadan</a> monthly meet-ups in Ibadan every third saturday.
         </article>
