added natterbase to work experience

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
     <div class="work-experience">
       <section>
         <h3>Work Experience</h3>
+        <h4><a href="http://natterbase.com/">NATTERBASE </a> – 10 Hughes Ave, Alagomeji-Yaba 100001, Lagos. – (January, 2019 – Present) – JavaScript Developer.</h4>
+        <article>
+          Working on <a href="https://zeedas.com">Zeedas</a> a project management solution focused on helping software development lifecycle with project outline and outsourcing. Our Platform was built with Node and Vue. I work on both the Backend and front-end side of the project. I hope to impact the project with Excellence and quality delivery.
+        </article>
         <h4><a href="http://www.edulightconsulting.com.ng/">EDULIGHT CONSULTING</a> – Dugbe, Ibadan, Oyo State. – (March, 2018 – December, 2018) – Web Development Training Facilitator.</h4>
         <article>
           Built <a href="https://github.com/EduLight-Consulting">modern curriculum around JavaScript and Node, taught web development and trained different Bootcamp cohorts. Built prototype used for teaching student.</a> and solution for small scale businesses. Our focus was leveraging JavaScript ease to build modern website. Increased the company’s value and reputation by producing skilled developers who are intern ready for affiliate business in need of developers. The organization hosts the <a href="http://fcc-ibadan.netlify.com">Freecodecamp Ibadan</a> monthly meet-ups in Ibadan every third saturday.
