--- a/index.html
+++ b/index.html
@@ -5,13 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ojo Oluwasetemi Stephen - Software Developer🔥</title>
-    <meta name="description" content="A bright, talented and ambitious JavaScript developer with a strong technical background with
-    self-discipline and good work ethic. Possess a deep love for
-    teaching JavaScript.👨‍💻">
-    <meta property="og:image" content="https://avatars0.githubusercontent.com/u/10030028?v=3">
+    <!-- <meta property="og:description" content="A ambitious 👨‍💻JavaScript Developer🔥 with a strong technical background, self-discipline and good work ethic. My love for teaching JavaScript is unconditional.💖"> -->
+
+    <!-- Generated from https://metatags.io -->
+    <!-- Primary Meta Tags -->
+    <title>Ojo Oluwasetemi's CV</title>
+    <meta name="title" content="Ojo Oluwasetemi's CV">
+    <meta name="description" content="A bright, talented and ambitious JavaScript developer with a strong technical background with self-discipline and good work ethic. Possess a deep love for teaching JavaScript.👨‍💻">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://cv-oluwasetemi.netlify.com/">
     <meta property="og:title" content="Ojo Oluwasetemi's CV">
-    <meta property="og:description" content="A ambitious 👨‍💻JavaScript Developer🔥 with a strong technical background, self-discipline and good work ethic. My love for teaching JavaScript is unconditional.💖">
+    <meta property="og:description" content="A bright, talented and ambitious JavaScript developer with a strong technical background with self-discipline and good work ethic. Possess a deep love for teaching JavaScript.👨‍💻">
+    <meta property="og:image" content="https://avatars0.githubusercontent.com/u/10030028?v=3">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://cv-oluwasetemi.netlify.com/">
+    <meta property="twitter:title" content="Ojo Oluwasetemi's CV">
+    <meta property="twitter:description" content="A bright, talented and ambitious JavaScript developer with a strong technical background with self-discipline and good work ethic. Possess a deep love for teaching JavaScript.👨‍💻">
+    <meta property="twitter:image" content="https://avatars0.githubusercontent.com/u/10030028?v=3">
 
     <!-- <link rel="dns-prefetch" href="https://avatars0.githubusercontent.com"> -->
     <link rel="shortcut icon" href="https://avatars0.githubusercontent.com/u/10030028?s=40&v=4" type="image/x-icon">
@@ -34,7 +48,9 @@
       </p>
       <p>
         <span class="codepen">
-          <svg id="codepen-box" viewBox="0 0 100 100" width="100%" height="100%"><path d="M100 34.2c-.4-2.6-3.3-4-5.3-5.3-3.6-2.4-7.1-4.7-10.7-7.1-8.5-5.7-17.1-11.4-25.6-17.1-2-1.3-4-2.7-6-4-1.4-1-3.3-1-4.8 0-5.7 3.8-11.5 7.7-17.2 11.5L5.2 29C3 30.4.1 31.8 0 34.8c-.1 3.3 0 6.7 0 10v16c0 2.9-.6 6.3 2.1 8.1 6.4 4.4 12.9 8.6 19.4 12.9 8 5.3 16 10.7 24 16 2.2 1.5 4.4 3.1 7.1 1.3 2.3-1.5 4.5-3 6.8-4.5 8.9-5.9 17.8-11.9 26.7-17.8l9.9-6.6c.6-.4 1.3-.8 1.9-1.3 1.4-1 2-2.4 2-4.1V37.3c.1-1.1.2-2.1.1-3.1 0-.1 0 .2 0 0zM54.3 12.3L88 34.8 73 44.9 54.3 32.4V12.3zm-8.6 0v20L27.1 44.8 12 34.8l33.7-22.5zM8.6 42.8L19.3 50 8.6 57.2V42.8zm37.1 44.9L12 65.2l15-10.1 18.6 12.5v20.1zM50 60.2L34.8 50 50 39.8 65.2 50 50 60.2zm4.3 27.5v-20l18.6-12.5 15 10.1-33.6 22.4zm37.1-30.5L80.7 50l10.8-7.2-.1 14.4z"></path></svg>
+          <svg id="codepen-box" viewBox="0 0 100 100" width="100%" height="100%">
+            <path d="M100 34.2c-.4-2.6-3.3-4-5.3-5.3-3.6-2.4-7.1-4.7-10.7-7.1-8.5-5.7-17.1-11.4-25.6-17.1-2-1.3-4-2.7-6-4-1.4-1-3.3-1-4.8 0-5.7 3.8-11.5 7.7-17.2 11.5L5.2 29C3 30.4.1 31.8 0 34.8c-.1 3.3 0 6.7 0 10v16c0 2.9-.6 6.3 2.1 8.1 6.4 4.4 12.9 8.6 19.4 12.9 8 5.3 16 10.7 24 16 2.2 1.5 4.4 3.1 7.1 1.3 2.3-1.5 4.5-3 6.8-4.5 8.9-5.9 17.8-11.9 26.7-17.8l9.9-6.6c.6-.4 1.3-.8 1.9-1.3 1.4-1 2-2.4 2-4.1V37.3c.1-1.1.2-2.1.1-3.1 0-.1 0 .2 0 0zM54.3 12.3L88 34.8 73 44.9 54.3 32.4V12.3zm-8.6 0v20L27.1 44.8 12 34.8l33.7-22.5zM8.6 42.8L19.3 50 8.6 57.2V42.8zm37.1 44.9L12 65.2l15-10.1 18.6 12.5v20.1zM50 60.2L34.8 50 50 39.8 65.2 50 50 60.2zm4.3 27.5v-20l18.6-12.5 15 10.1-33.6 22.4zm37.1-30.5L80.7 50l10.8-7.2-.1 14.4z"></path>
+          </svg>
           <a href="https://codepen.io/setemiojo">setemiojo</a>
         </span>
         <span class="github">
@@ -50,22 +66,38 @@
     <div class="personal-summary">
       <h3>Personal Information</h3>
       <p>
-        A JavaScript developer with a good technical background, little experience with self-discipline and good work ethic. Possess a deep love for JavaScript. Have passion to work with emerging web technologies and building products especially the Backend details using Nodejs. A team player, who is organized, can present complex solutions clearly and accurately with love for speaking and teaching👨‍🏫.
+        A JavaScript developer with a good technical background, little experience with self-discipline and good work
+        ethic. Possess a deep love for JavaScript. Have passion to work with emerging web technologies and building
+        products especially the Backend details using Nodejs. A team player, who is organized, can present complex
+        solutions clearly and accurately with love for speaking and teaching👨‍🏫.
       </p>
       <p>
-        With less than <a href="https://github.com/Oluwasetemi">2 years+ worth experience</a> I am looking for an opportunity to work on modern web application development as JavaScript (JavaScript or Node) Developer. I am a co-organizer of the FreeCodeCamp Ibadan Community Meet-up where I have mentored 50+ devs to get started with JavaScript as a language.
+        With less than <a href="https://github.com/Oluwasetemi">2 years+ worth experience</a> I am looking for an
+        opportunity to work on modern web application development as JavaScript (JavaScript or Node) Developer. I am a
+        co-organizer of the FreeCodeCamp Ibadan Community Meet-up where I have mentored 50+ devs to get started with
+        JavaScript as a language.
       </p>
     </div>
     <div class="work-experience">
       <section>
         <h3>Work Experience</h3>
-        <h4><a href="http://natterbase.com/">NATTERBASE </a> – 10 Hughes Ave, Alagomeji-Yaba 100001, Lagos. – (January, 2019 – Present) – JavaScript Developer.</h4>
+        <h4><a href="http://natterbase.com/">NATTERBASE </a> – 10 Hughes Ave, Alagomeji-Yaba 100001, Lagos. – (January,
+          2019 – Present) – JavaScript Developer.</h4>
         <article>
-          Working on <a href="https://zeedas.com">Zeedas</a> a project management solution focused on helping software development lifecycle with project outline and outsourcing. Our Platform was built with Node and Vue. I work on both the Backend and front-end side of the project. I hope to impact the project with Excellence and quality delivery.
+          Working on <a href="https://zeedas.com">Zeedas</a> a project management solution focused on helping software
+          development lifecycle with project outline and outsourcing. Our Platform was built with Node and Vue. I work
+          on both the Backend and front-end side of the project. I hope to impact the project with Excellence and
+          quality delivery.
         </article>
-        <h4><a href="http://www.edulightconsulting.com.ng/">EDULIGHT CONSULTING</a> – Dugbe, Ibadan, Oyo State. – (March, 2018 – December, 2018) – Web Development Training Facilitator.</h4>
+        <h4><a href="http://www.edulightconsulting.com.ng/">EDULIGHT CONSULTING</a> – Dugbe, Ibadan, Oyo State. –
+          (March, 2018 – December, 2018) – Web Development Training Facilitator.</h4>
         <article>
-          Built <a href="https://github.com/EduLight-Consulting">modern curriculum around JavaScript and Node, taught web development and trained different Bootcamp cohorts. Built prototype used for teaching student.</a> and solution for small scale businesses. Our focus was leveraging JavaScript ease to build modern website. Increased the company’s value and reputation by producing skilled developers who are intern ready for affiliate business in need of developers. The organization hosts the <a href="http://fcc-ibadan.netlify.com">Freecodecamp Ibadan</a> monthly meet-ups in Ibadan every third saturday.
+          Built <a href="https://github.com/EduLight-Consulting">modern curriculum around JavaScript and Node, taught
+            web development and trained different Bootcamp cohorts. Built prototype used for teaching student.</a> and
+          solution for small scale businesses. Our focus was leveraging JavaScript ease to build modern website.
+          Increased the company’s value and reputation by producing skilled developers who are intern ready for
+          affiliate business in need of developers. The organization hosts the <a href="http://fcc-ibadan.netlify.com">Freecodecamp
+            Ibadan</a> monthly meet-ups in Ibadan every third saturday.
         </article>
       </section>
       <section>
@@ -74,13 +106,17 @@
         <article>
           Tasked with the Responsibility of teaching current computer science to students using modern
           facilities.
-          Teaching and upgrading staff IT experience. I trained Staffs and students on Microsoft Packages and Modern Web Experience and Digital Relevance.
+          Teaching and upgrading staff IT experience. I trained Staffs and students on Microsoft Packages and Modern
+          Web Experience and Digital Relevance.
         </article>
       </section>
       <section>
         <h4>CMAPIT HUB – Ogbomoso, Oyo State – (December 2015 – July 2016) – Intern</h4>
         <article>
-          As a student ambassador for Jet Brain, I co-organized events to help expose students to current technologies like Git using GitHub and Jet Brain Softwares. Led a Team that organized Jet Brains Student Meet-up, GitHub Student Meet-up to facilitate software development process using collaborative effort contribution among young upcoming developers in the Lautech Community.
+          As a student ambassador for Jet Brain, I co-organized events to help expose students to current technologies
+          like Git using GitHub and Jet Brain Softwares. Led a Team that organized Jet Brains Student Meet-up, GitHub
+          Student Meet-up to facilitate software development process using collaborative effort contribution among
+          young upcoming developers in the Lautech Community.
           <p>Worked with Raspberry Pi to facilitate computer science training.</p>
         </article>
       </section>
@@ -95,9 +131,12 @@
     </div>
     <div class="side-projects">
       <h3>Side Projects</h3>
-      <p><a href="https://stores-app-lhinvnequz.now.sh">Stores - Built from a tutorial by @wesbos using Node and JavaScript with MongoDB deployed on Now</a></p>
-      <p><a href="https://yelp-camp-pmmjlzfmcv.now.sh">Yelp Camp - Built from a Colt Steele Tutorial with additional features with Node and JavaScript deployed on Now and Database hosted on mLab!</a></p>
-      <p><a href="https://consistent-university-ppunkmmvej.now.sh/">Consistent University - An Educational Website with Nextjs deployed on Now</a></p>
+      <p><a href="https://stores-app-lhinvnequz.now.sh">Stores - Built from a tutorial by @wesbos using Node and
+          JavaScript with MongoDB deployed on Now</a></p>
+      <p><a href="https://yelp-camp-pmmjlzfmcv.now.sh">Yelp Camp - Built from a Colt Steele Tutorial with additional
+          features with Node and JavaScript deployed on Now and Database hosted on mLab!</a></p>
+      <p><a href="https://consistent-university-ppunkmmvej.now.sh/">Consistent University - An Educational Website with
+          Nextjs deployed on Now</a></p>
       <p><a href="https://t.me/the_word_dico_bot">A Telegram Bot - Word Assistant deployed on Openode</a></p>
       <p><a href="#">Sick Fits - **Work in Progress**</a></p>
     </div>
