NEW:Headline changes

--- a/index.html
+++ b/index.html
@@ -66,14 +66,8 @@
     <div class="personal-summary">
       <h3>Personal Information</h3>
       <p>
-        A JavaScript developer with a good technical background, little experience with self-discipline and good work
-        ethic. Possess a deep love for JavaScript. Have passion to work with emerging web technologies and building
-        products especially the Backend details using Nodejs. A team player, who is organized, can present complex
-        solutions clearly and accurately with love for speaking and teaching👨‍🏫.
-      </p>
-      <p>
-        With less than <a href="https://github.com/Oluwasetemi">2 years+ worth experience</a> I am looking for an
-        opportunity to work on modern web application development as JavaScript (JavaScript or Node) Developer. I am a
+        A JavaScript(Node and React) developer with good technical background, with more than <a href="https://github.com/Oluwasetemi">3 years+ worth experience</a> , self-discipline and good work
+        ethic. Possess a deep love for Teaching👨‍🏫 and Speaking🗣️. Have passion to work with cutting edge web technologies like React and GraphQL to build software products that are tested using JEST by a Test Driven Development approach with continuous integration pipelines using Agile methodologies. A team player, who is organized, can present complex solutions clearly and accurately. One to always have on your team.I am a
         co-organizer of the FreeCodeCamp Ibadan Community Meet-up where I have mentored 50+ devs to get started with
         JavaScript as a language.
       </p>
