FIX: 2 page cleanup

--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
                 >
                 , self-discipline and good work ethic. Possess a deep love for
                 Teaching👨‍🏫 and Speaking🗣️. Have passion to work with cutting
-                edge web technologies like React and GraphQL to build software
-                products that are tested using JEST by a Test Driven Development
-                approach with continuous integration pipelines using Agile
-                methodologies. A team player, who is organized, can present
-                complex solutions clearly and accurately. One to always have on
-                your team.
+                edge web technologies like <b>React</b> and <b>GraphQL</b> to
+                build software products that are tested using <b>JEST</b> by a
+                <b>Test Driven Development</b> approach with continuous
+                integration pipelines using <b>Agile methodologies</b>. A team
+                player, who is organized, can present complex solutions clearly
+                and accurately. One to always have on your team.
             </p>
             <p>
                 I am a co-organizer of the FreeCodeCamp Ibadan Community Meet-up
@@ -143,8 +143,8 @@
                     management solution focused on helping software development
                     lifecycle with project outline and outsourcing. Our Platform
                     was built with Node and Vue. I work on both the Backend and
-                    front-end side of the project. I hope to impact the project
-                    with Excellence and quality delivery.
+                    front-end side of the project. I also work on some other
+                    client projects mostly the backend using Nodejs.
                 </article>
                 <h4>
                     <a href="http://www.edulightconsulting.com.ng/"
@@ -171,7 +171,7 @@
                     monthly meet-ups in Ibadan every third saturday.
                 </article>
             </section>
-            <section>
+            <section class="last">
                 <h4>
                     MT. ST. MICHAEL SECONDARY SCHOOL– Aliade, Benue State –
                     (2017 - 2018) - Computer Instructor and Staff Trainer.
@@ -184,6 +184,8 @@
                     Relevance.
                 </article>
             </section>
+
+            <hr />
             <section>
                 <h4>
                     CMAPIT HUB – Ogbomoso, Oyo State – (December 2015 – July
@@ -203,7 +205,6 @@
                     </p>
                 </article>
             </section>
-            <hr />
             <section>
                 <h4>
                     LAUTECH ICT SOFTWARE DEPARTMENT - Ogbomoso, Oyo State -
@@ -277,35 +278,36 @@
                 <div class="front-end">
                     <div class="row row_cell">
                         <p class="front-end_item">
-                            HTML -
-                            <progress value="90" max="100">HTML</progress>
+                            HTML
+                            <!-- -<progress value="90" max="100">HTML</progress> -->
                         </p>
                         <p class="front-end_item">
-                            CSS - <progress value="80" max="100">CSS</progress>
+                            CSS
+                            <!-- - <progress value="80" max="100">CSS</progress> -->
                         </p>
                         <p class="front-end_item">
-                            JavaScript -
-                            <progress value="70" max="100">JavaScript</progress>
+                            <!-- JavaScript -
+                            <progress value="70" max="100">JavaScript</progress> -->
                         </p>
                         <p class="front-end_item">
-                            React -
-                            <progress value="50" max="100">React</progress>
+                            React
+                            <!-- -<progress value="50" max="100">React</progress> -->
                         </p>
                         <p class="front-end_item">
-                            React -
-                            <progress value="50" max="100">React</progress>
+                            React
+                            <!-- -<progress value="50" max="100">React</progress> -->
                         </p>
                         <p class="front-end_item">
-                            Redux -
-                            <progress value="30" max="100">Redux</progress>
+                            Redux
+                            <!-- -<progress value="30" max="100">Redux</progress> -->
                         </p>
                         <p class="front-end_item">
-                            Webpack -
-                            <progress value="50" max="100">Webpack</progress>
+                            Webpack
+                            <!-- -<progress value="50" max="100">Webpack</progress> -->
                         </p>
                         <p class="front-end_item">
-                            Nextjs -
-                            <progress value="30" max="100">Nextjs</progress>
+                            Nextjs
+                            <!-- -<progress value="30" max="100">Nextjs</progress> -->
                         </p>
                     </div>
                 </div>
@@ -314,42 +316,45 @@
                 <h4>Back-End Technologies</h4>
                 <div class="row row_cell">
                     <p class="front-end_item">
-                        Nodejs -
-                        <progress value="70" max="100">Nodejs</progress>
+                        Nodejs
+                        <!-- -<progress value="70" max="100">Nodejs</progress> -->
                     </p>
                     <p class="front-end_item">
-                        Express -
-                        <progress value="70" max="100">Express</progress>
+                        Express
+                        <!-- -<progress value="70" max="100">Express</progress> -->
                     </p>
                     <p class="front-end_item">
-                        REST-API -
-                        <progress value="100" max="100">REST-API</progress>
+                        REST-API
+                        <!-- -<progress value="100" max="100">REST-API</progress> -->
                     </p>
                     <p class="front-end_item">
-                        GraphQL -
-                        <progress value="60" max="100">GraphQL</progress>
+                        GraphQL
+                        <!-- -<progress value="60" max="100">GraphQL</progress> -->
                     </p>
                     <p class="front-end_item">
-                        Containers -
-                        <progress value="20" max="100">Containers</progress>
+                        Containers
+                        <!-- -<progress value="20" max="100">Containers</progress> -->
                     </p>
                 </div>
             </section>
             <section>
                 <h4>Software Collaboration</h4>
                 <p class="front-end_item">
-                    Git - <progress value="50" max="100">Git</progress>
+                    Git
+                    <!-- - <progress value="50" max="100">Git</progress> -->
                 </p>
+                Version Control
             </section>
             <section>
                 <h4>Database</h4>
                 <div class="row row_cell">
                     <p class="front-end_item">
-                        SQL - <progress value="50" max="100">SQL</progress>
+                        SQL
+                        <!-- - <progress value="50" max="100">SQL</progress> -->
                     </p>
                     <p class="front-end_item">
-                        NoSQL -
-                        <progress value="70" max="100">NoSQL-MongoDB</progress>
+                        NoSQL
+                        <!-- -<progress value="70" max="100">NoSQL-MongoDB</progress> -->
                     </p>
                 </div>
             </section>
