FIX: remove add in the info category

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
         </h2>
 
         <div class="info">
-            <p class="address">
+            <!-- <p class="address">
                 BQ HBLK 074, Opposite Estate Unit, UCH Quarters, UCH, Ibadan,
                 Oyo State.
-            </p>
+            </p> -->
             <p class="country">Nationality: Nigerian.</p>
             <p class="dob">Date of birth: 12th of February, 1993.</p>
             <p class="info-contact">
