ADD: a new class to support content with width above 100px

--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
                             <!-- - <progress value="80" max="100">CSS</progress> -->
                         </p>
                         <p class="front-end_item">
-                            <!-- JavaScript -
-                            <progress value="70" max="100">JavaScript</progress> -->
+                            JavaScript
+                            <!-- -<progress value="70" max="100">JavaScript</progress> -->
                         </p>
                         <p class="front-end_item">
                             React
@@ -338,12 +338,21 @@
                 </div>
             </section>
             <section>
-                <h4>Software Collaboration</h4>
-                <p class="front-end_item">
-                    Git
-                    <!-- - <progress value="50" max="100">Git</progress> -->
-                </p>
-                Version Control
+                <h4>Software Development</h4>
+                <div class="row row_cell">
+                    <p class="front-end_longItem">
+                        Version Control - Git
+                        <!-- - <progress value="50" max="100">Git</progress> -->
+                    </p>
+                    <p class="front-end_longItem">
+                        Agile Methodologies
+                        <!-- - <progress value="50" max="100">Git</progress> -->
+                    </p>
+                    <p class="front-end_longItem">
+                        Test Driven Development
+                        <!-- - <progress value="50" max="100">Git</progress> -->
+                    </p>
+                </div>
             </section>
             <section>
                 <h4>Database</h4>
